--- a/newstyle.css
+++ b/newstyle.css
@@ -1,5 +1,61 @@
+*,
+*::before
+*::after {
+    box-sizing: border-box;
+}
+
+
+.nav{
+    background-color: chartreuse;
+    border-radius: 25px;
+    
+    
+}
+.header{
+   
+    justify-content: space-between;
+    
+    
+}
 .logo{
-    align-items: center;
-    width: 50%;
-    height: 50%;
+    width: 75px;
+    position: relative;
+    float: none;
+    margin: -50px 50% 0 auto;
+    z-index: 999;
+    
+}
+@media (max-width: 480px){
+    .logo{
+        float:none;
+        margin: 25px auto 0 auto;
+       
+    
+
+    }
+}
+.nav_list ul{
+    list-style: style none;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    display: inline-block;
+    
+    
+}
+.nav li{
+    display:inline-flex;
+    vertical-align: center;
+   
+}
+.nav a{
+    text-decoration: none;
+    color: aliceblue;
+    
+    width: 100px;
+    display: inline-block;
+    padding: 20px 20px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
 }
