--- a/newstyle.css
+++ b/newstyle.css
@@ -18,7 +18,7 @@ header{
     align-items: center;
 }
 
-.logo{
+/* .logo{
     width: 75px;
     position: absolute;
     left: 47.5%;
@@ -27,7 +27,7 @@ header{
     transform: translateY(-45%);
     z-index: 999;
     
-}
+} */
 
 .nav_list{
     list-style: none;
@@ -63,4 +63,30 @@ header{
     text-transform: uppercase;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.nav {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.nav-left {
+    justify-self: start;
+    align-self: start;
+
+}
+
+.nav-right {
+    align-self: start;
+    justify-self: end;
+}
+
+.nav-center {
+    justify-self: center;
+}
+
+.nav ul {
+    padding: 0px;
+    padding-inline-start: 0px;
+    margin: 0;
 }
