--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 *,
-*::before
-*::after {
+*::before *::after {
     box-sizing: border-box;
 }
+
 /* Custom Properties */
-:root{
-    
+:root {
+
     --ff-primary: 'Open Sans', open-sans;
     --ff-secondary: 'Raleway', raleway;
 
@@ -20,25 +20,24 @@
     --fs-h2: 2.25rem;
     --fs-h3: 1.5rem;
     --fs-body: 1rem;
-    
-    --shadow: 0.25em 0.25em 0.75em rgba(0, 0, 0, 0.25), 0.125em 0.125em 0.25em rgba(0,0,0,0.15);
+
+    --shadow: 0.25em 0.25em 0.75em rgba(0, 0, 0, 0.25), 0.125em 0.125em 0.25em rgba(0, 0, 0, 0.15);
 }
 
 
 
 
-@media (min-width: 800px){
+@media (min-width: 800px) {
     :root {
         --fs-h1: 4.5rem;
         --fs-h2: 3.75rem;
         --fs-h3: 1.5rem;
         --fs-body: 1.125rem;
     }
-    
+
 }
 
 /* General styling */
-
 body {
     background: var(--clr-light);
     color: var(--clr-dark);
@@ -46,23 +45,29 @@ body {
     font-family: var(--ff-primary);
     font-size: var(--fs-body);
     line-height: 1;
-    
+
 }
-section{
+
+section {
     padding: 5em 2em;
 }
-img{
+
+img {
     display: block;
     max-width: 100%;
 }
 
-strong{font-weight: var(--fw-bold)}
-/* Button*/
+strong {
+    font-weight: var(--fw-bold)
+}
 
-:focus{
+/* Button */
+
+:focus {
     outline: 3px solid var(--clr-accent);
     outline-offset: 3px;
 }
+
 .btn {
     display: inline-block;
     padding: 1em 2.5em;
@@ -77,11 +82,11 @@ strong{font-weight: var(--fw-bold)}
     transition: transform 200ms ease-in-out;
 }
 
-.btn:hover{
+.btn:hover {
     transform: scale(1.1);
 }
-/* Typeface */
 
+/* Typeface */
 h1,
 h2,
 h3 {
@@ -89,31 +94,39 @@ h3 {
     margin: 0;
 }
 
-h1{ font-size: var(--fs-h1)}
-h2{ font-size: var(--fs-h2)}
-h3{ font-size: var(--fs-h3)}
+h1 {
+    font-size: var(--fs-h1)
+}
 
-.section_title{
+h2 {
+    font-size: var(--fs-h2)
+}
+
+h3 {
+    font-size: var(--fs-h3)
+}
+
+.section_title {
     margin-bottom: .25em;
 }
 
-.section_title_intro{
+.section_title_intro {
     font-weight: var(--fw-reg);
 }
 
-.section_subtitle{
+.section_subtitle {
     margin: 0;
     font-size: var(--fs-h3);
 }
 
 
-.section_subtitle_intro strong{
+.section_subtitle_intro strong {
     display: block;
 }
 
 
 .section_subtitle_intro,
-.section_subtitle_about{
+.section_subtitle_about {
     background: var(--clr-accent);
     padding: 0.25em 1em;
     font-family: var(--ff-secondary);
@@ -121,17 +134,17 @@ h3{ font-size: var(--fs-h3)}
 }
 
 /* Header */
-.header{
+.header {
     display: flex;
     justify-content: space-between;
     padding: 1em;
 }
 
-.logo{
+.logo {
     max-width: 100px;
 }
 
-.nav{
+.nav {
     position: fixed;
     background: var(--clr-dark);
     color: var(--clr-light);
@@ -144,7 +157,8 @@ h3{ font-size: var(--fs-h3)}
     transform: translateX(100%);
     transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1);
 }
-.nav_list{
+
+.nav_list {
     list-style: none;
     display: flex;
     height: 100%;
@@ -155,18 +169,18 @@ h3{ font-size: var(--fs-h3)}
     padding: 0;
 }
 
-.nav_link{
+.nav_link {
     color: inherit;
     font-weight: var(--fw-bold);
     font-size: var(--fs-h3);
     text-decoration: none;
 }
 
-.nav_link:hover{
+.nav_link:hover {
     color: var(--clr-accent);
 }
 
-.nav_toggle{
+.nav_toggle {
     padding: 0.5em;
     background: transparent;
     border: 0;
@@ -177,14 +191,15 @@ h3{ font-size: var(--fs-h3)}
     z-index: 1000;
 
 }
-.navburger{
+
+.navburger {
     display: block;
     position: relative;
 }
 
 .navburger,
 .navburger::before,
-.navburger::after{
+.navburger::after {
     background-color: var(--clr-accent);
     width: 2em;
     height: 3px;
@@ -193,42 +208,48 @@ h3{ font-size: var(--fs-h3)}
 }
 
 .navburger::before,
-.navburger::after{
+.navburger::after {
     content: '';
     position: absolute;
     left: 0;
     right: 0;
 }
 
-.navburger::before{top: 6px;}
-.navburger::after{bottom: 6px;}
+.navburger::before {
+    top: 6px;
+}
+
+.navburger::after {
+    bottom: 6px;
+}
 
 /* Intro section styling*/
 
-.intro{
+.intro {
     position: relative;
 }
 
-.intro_img{
+.intro_img {
     box-shadow: var(--shadow);
 }
 
-.section_subtitle_intro{
+.section_subtitle_intro {
     display: inline-block;
 }
-@media(min-width: 600px){
+
+@media(min-width: 600px) {
     .intro {
         display: grid;
         width: min-content;
         margin: 0 auto;
         grid-column-gap: 1em;
         grid-template-areas:
-        "img title"
-        "img subtitle";
+            "img title"
+            "img subtitle";
         grid-template-columns: min-content max-content;
     }
 
-    .intro_img{
+    .intro_img {
         grid-area: img;
         min-width: 250px;
         position: relative;
@@ -236,7 +257,7 @@ h3{ font-size: var(--fs-h3)}
     }
 }
 
-.section_subtitle_intro{
+.section_subtitle_intro {
     align-self: start;
     grid-column: -1/ 1;
     grid-row: 2;
@@ -248,66 +269,69 @@ h3{ font-size: var(--fs-h3)}
 
 /* What I've Done Section */
 
-.my-work{
+.my-work {
     background-color: var(--clr-dark);
     background-image: url(color-seamless-space-pattern_102902-2360.webp);
     background-size: cover;
-    
+
     color: var(--clr-light);
     text-align: center;
 }
-.section_title-work{
+
+.section_title-work {
     color: var(--clr-accent);
     position: relative;
 }
 
-.workies{
+.workies {
     margin-bottom: 2em;
 }
-.work{
+
+.work {
     max-width: 500px;
-    margin:0 auto;
+    margin: 0 auto;
 }
 
-@media (min-width: 800px){
-    .workies{
-        display:flex;
+@media (min-width: 800px) {
+    .workies {
+        display: flex;
         max-width: 1000px;
         margin-left: auto;
         margin-right: auto;
     }
 
-    .work + .work{
+    .work+.work {
         margin-left: 2em;
     }
 }
 
 /*about me */
 
-.about-me{
+.about-me {
     max-width: 1000px;
     margin: 0 auto;
 }
 
-.about-me-img{
+.about-me-img {
     box-shadow: var(--shadow);
 }
 
-@media (min-width: 600px)
-{
+@media (min-width: 600px) {
     .about-me {
         display: grid;
         grid-template-columns: 1fr 200px;
-        grid-template-areas: 
-        "title img"
-        "subtitle img"
-        "text img";
+        grid-template-areas:
+            "title img"
+            "subtitle img"
+            "text img";
         grid-column-gap: 2em;
     }
-    .section_title_about{
+
+    .section_title_about {
         grid-area: title;
     }
-    .section_subtitle_about{
+
+    .section_subtitle_about {
         align-self: center;
         grid-column: 1 / -1;
         grid-row: 2;
@@ -318,89 +342,101 @@ h3{ font-size: var(--fs-h3)}
         padding-left: 1em;
         padding-right: calc(200px + 2em);
     }
-    .about-me-img{
-       grid-area: img;
-       position: relative;
-       z-index: 2;
+
+    .about-me-img {
+        grid-area: img;
+        position: relative;
+        z-index: 2;
     }
 
     /* Projects */
 
-    .my-projects
-    {
+    .my-projects {
         background-color: var(--clr-dark);
         color: var(--clr-light);
         text-align: center;
     }
-    .section_subtitle_projects{
+
+    .section_subtitle_projects {
         color: var(--clr-accent);
         font-weight: var(--fw-bold);
         margin-bottom: 2em;
     }
-    .portfolio{
+
+    .portfolio {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     }
-    .portfolio_item{
+
+    .portfolio_item {
         background: var(--clr-accent);
         overflow: hidden;
     }
-    .portfolio_img{
+
+    .portfolio_img {
         transition: transform 750ms cubic-bezier(0.5, 0, 0.5, 1),
-        opacity 250ms linear;
+            opacity 250ms linear;
     }
-    .portfolio_item:focus{
+
+    .portfolio_item:focus {
         position: relative;
         z-index: 2;
     }
+
     .portfolio_img:hover,
-    .portfolio_item:focus .portfolio_img{
-        transform:scale(1.2);
+    .portfolio_item:focus .portfolio_img {
+        transform: scale(1.2);
         opacity: 0.5;
     }
 
     /* Footer */
 
-    .footer{
+    .footer {
         background: #fff;
         color: var(--clr-accent);
         text-align: center;
         padding: .5em 0;
         font-size: var(--fs-h3);
     }
-    .footer a{ 
-        color:inherit;
+
+    .footer a {
+        color: inherit;
         text-decoration: none;
     }
 
-    .footer-link{
-        
+    .footer-link {
+
         font-weight: var(--fw-bold);
         margin-left: 10%;
         margin-right: 10%;
-        
+
     }
+
     .footer-link:hover,
-    .social-list_link:hover{
+    .social-list_link:hover {
         opacity: 0.75;
     }
-    .footer-link:hover{
+
+    .footer-link:hover {
         text-decoration: underline;
     }
+
     .footer-link,
-    .social-list{
+    .social-list {
         list-style: none;
         display: flex;
         justify-content: center;
         margin: 2em 0;
         padding: 0;
     }
+
     .footer-link,
-    .social-list_item{
+    .social-list_item {
         margin: 0 0.5em;
     }
+
     .footer-link,
-    .social-list_link{
+    .social-list_link {
         padding: 0.5em;
     }
 }
