--- a/new/style.css
+++ b/new/style.css
@@ -250,6 +250,33 @@ body {
     font-weight: normal;
     color: #47525E;
 }
+.socials-container{
+    text-align: center;
+}
+.socials-text-container{
+    background-color: #E6F9DE;
+    border-radius: 15px;
+    padding: 20px;
+    width: 500px;
+    height: 400px;
+    margin-top: 40px;
+    margin-left: 26.5%;
+    text-align: center;
+    font-size:18px;
+
+}
+.socials-text{
+    font-size: 32px;
+    font-weight: bold;
+    color: #47525E;
+    margin-top: 20px;
+}
+.socials-subtext{
+    font-size: 28px;
+    margin-top: 10px;
+    font-weight: normal;
+    color: #47525E;
+}
 
 /* .arrow-right{
     position: relative;
