--- a/newstyle.css
+++ b/newstyle.css
@@ -1,66 +1,401 @@
-*,
-*::before
-*::after {
-    box-sizing: border-box;
+body {
+    font-family: 'Montserrat';
+    font-weight: 500;
 }
-header{
+
+.navbar {
+    background-color: #E6F9DE;
+    margin: 20px;
+    display: grid;
+    grid-template-columns: 0.05fr 1fr;
+    padding: 30px;
+    border-radius: 15px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    font-size:20px;
+}
+
+.navbar-items {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    justify-content: end;
+    align-items: right;
+}
+
+.navbar-logo {
+    background-color: #D0E2C8;
+    padding: 5px 10px 5px 20px;
+    border-radius: 5px;
+    width:120%;
+}
+
+.item {
+    background-color: #D0E2C8;
+    padding: 5px 20px 5px 20px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.hr{
+    width: 50%;
+    margin-left: 25%;
+    margin-right: 25% ;
+    border: 1px solid #E6F9DE;
+
+}
+.hr2{
+    width: 50%;
+    border: 1px solid #E6F9DE;
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-top: 20px;
+}
+.hr-skills{
+    width: 75%;
+    border: 1px solid #343F4B;
    
-    justify-content: space-between;
-    
+    margin-top: 25%;
 }
 
-.nav{
-    background-color: chartreuse;
-    border-bottom-left-radius: 25px;
-    border-bottom-right-radius: 25px;
-    display:flex;
-    justify-content: center;
-    align-items: center;
+.hero {
+    display: grid;
+    grid-template-columns: 0.3fr 1fr;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
 }
 
-.logo{
-    width: 75px;
-    position: absolute;
-    left: 50%;
-    
-    top: 5%;
-    transform: translateY(-45%);
-    z-index: 999;
-    
+.hero-image {
+    background-image: url(/assets/images/PF_BW.png);
+    width: 250px;
+    height: 250px;
+    border-radius: 15px;
+
+    background-size: cover;
 }
 
-.nav-list{
-    list-style: none;
-    padding: 0;
-    margin: 0;
+.hero-content {
+    margin-top:auto;
+    margin-bottom: auto;
+}
+
+.hero-text {
+    font-size: 32px;
+    font-weight: bold;
+    color: #47525E;
+}
+
+.hero-subtext {
+    font-size: 28px;
+    margin-top: 10px;
+    color: #47525E;
+    font-weight: normal;
+}
+.skills-container{
+    text-align: center;
+}
+.skills-text {
+    font-size: 32px;
+    font-weight: bold;
+    color: #47525E;
+}
+
+.skills-subtext {
+    font-size: 28px;
+    margin-top: 10px;
+    font-weight: normal;
+    color: #47525E;
+}
+.text-container{
+    background-color: #E6F9DE;
+    border-radius: 15px;
+    padding: 20px;
+    width: 35%;
+    height: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    text-align: center;
+    font-size:18px;
+}
+
+.text-container2{
+    background-color: #E6F9DE;
+    border-radius: 15px;
+    padding: 20px;
+    width:100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    text-align: center;
+    font-size:18px;
+
+}
+.text-container3{
+    background-color: #E6F9DE;
+    border-radius: 15px;
+    padding: 20px;
+    width:25%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    text-align: center;
+    font-size:18px;
+
+}
+.skills-text-container{
+    background-color: #E6F9DE;
+    border-radius: 15px;
+    padding: 20px;
+    width:25%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    text-align: center;
+    font-size:18px;
+}
+.skills-sub-text-container{
+    background-color: #E6F9DE;
+    border-radius: 15px;
+    padding: 20px;
+    width:40%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    text-align: center;
+    font-size:18px;
+}
+.defense-text-container{
+    background-color: #E6F9DE;
+    border-radius: 15px;
+    padding: 20px;
+    width: 800px;
+    height: 500px;
+    margin-right: 24px;
+    margin-top: 40px;
+    text-align: center;
+    font-size:18px;
+    transition: background-color 0.3s ease;
+}
+.defense-text-container:hover{
+    background-color: #e2fed6;
+     transition: opacity 0.3s ease;
+}
+.defense-text-container::after{
+  content: ""; /* Content to be added on hover */
+  padding: 5px 10px;
+  border-radius: 4px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+.defense-text-container .box-text-defense {
+    transition: opacity 0.3s ease;
+  }
+.defense-text-container:hover .box-text-defense {
+    opacity: 0;
+}
+.defense-text-container:hover::after{
+    content: "I made a quiz application for the new interns for my internship. There were question about ranking within the military and general do's and don't. I was very happy with the project, because of it I got offered a job at the ministries Simulation Central building to work on guiding the new Interns. Skills: Unity & C#";
+    opacity: 1;
+}
+.kapper-text-container{
+    background-color: #E6F9DE;
+    border-radius: 15px;
+    padding: 20px;
+    width: 800px;
+    height: 500px;
+    margin-right: 24px;
+    margin-top: 40px;
+    text-align: center;
+    font-size:18px;
+    transition: background-color 0.3s ease;
+}
+.kapper-text-container:hover{
+    background-color: #e2fed6;
+    transition: opacity 0.3s ease;
+}
+.kapper-text-container::after{
+    content: ""; /* Content to be added on hover */
+    padding: 5px 10px;
+    border-radius: 4px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+.kapper-text-container .box-text-kapper {
+    transition: opacity 0.3s ease;
+}
+
+.kapper-text-container:hover .box-text-kapper {
+    opacity: 0;
+ }
+.kapper-text-container:hover::after{
+    content: "For school we had to make a application for a barber, this could be anything. We decided to make a website with a backend portal. We ran into a lot of problems with teamwork and workload. I learned alot from this project about teamwork and it was also the start of my journey with CSS & HTML. Skills: HTML & CSS Frontend";
+    opacity: 1;
+}
+.portfolio-text-container{
+    background-color: #E6F9DE;
+    border-radius: 15px;
+    padding: 20px;
+    width: 800px;
+    height: 500px;
+    margin-right: 24px;
+    margin-top: 40px;
+    text-align: center;
+    font-size:18px;
+    transition: background-color 0.3s ease;
+}
+.portfolio-text-container:hover{
+    background-color: #e2fed6;
+    transition: opacity 0.3s ease;
+}
+.portfolio-text-container::after{
+    content: ""; /* Content to be added on hover */
+    padding: 5px 10px;
+    border-radius: 4px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+  .portfolio-text-container .box-text-portfolio {
+      transition: opacity 0.3s ease;
+    }
+  .portfolio-text-container:hover .box-text-portfolio {
+      opacity: 0;
+  }
+  .portfolio-text-container:hover::after{
+      content: "Of course I made my portfolio myself. I used Marvel to make the design and html and CSS for the actual scripting. I remade this website about 4 times throughout it's lifetime. I can finally say I'm happy with how it looks. It ofcourse will be updated with more functionality and information. Skills: HTML & Css & UX desinging skills.";
+      opacity: 1;
+  }
+.city-builder-text-container{
+    background-color: #E6F9DE;
+    border-radius: 15px;
+    padding: 20px;
+    width: 900px;
+    height: 200px;
+    margin-top: 40px;
+    margin-left: 26.5%;
+    text-align: center;
+    font-size:18px;
+    transition: background-color 0.3s ease;
+}
+.city-builder-text-container:hover{
+    background-color: #e2fed6;
+    transition: opacity 0.3s ease;
+}
+.city-builder-text-container::after{
+    content: ""; /* Content to be added on hover */
+    padding: 5px 10px;
+    border-radius: 4px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+  .city-builder-text-container .box-text-city-builder {
+      transition: opacity 0.3s ease;
+    }
+  .city-builder-text-container:hover .box-text-city-builder {
+      opacity: 0;
+  }
+  .city-builder-text-container:hover::after{
+      content: "With school I started my own project, aptly named Project RTS City Builder. This project was meant to teach students about the first year of school and how to work on their personal work for school. However not everything went as planned. This project was once again a great opportunity for learning. Skills: Unity & Project management with Devops & C#";
+      opacity: 1;
+  }
+.box-text-defense{
+    text-align: center;
+    margin-top: 15%;
+}
+.box-text-kapper{
+    text-align: center;
+    margin-top: 15%;
+}
+.box-text-portfolio{
+    text-align: center;
+    margin-top: 15%;
+}
+.box-text-city-builder{
+    text-align: center;
+    margin-top: 1%;
+    
+}
+.project-box-container{
     display: flex;
     align-items: center;
+    margin-left: 25%;
+    margin-right: 25%;
 }
-.nav-items{
-    display: inline-flex;
-    align-items:center;
-    margin: 0 iem;
-    padding: 2px;
-    background-color: orange;
-    border-bottom-left-radius: 25px;
-    border-bottom-right-radius: 25px;
-    margin-inline-end: 20px;
-    margin-inline-start: 20px;
+.divider{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    width:100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:100px;
+    place-items: center;
 }
 
-.nav li:hover{
-    background-color: grey;
-    padding-top: -1em;
-    padding-bottom: -1em;
-    border-bottom-left-radius: 25px;
-    border-bottom-right-radius: 25px;
+.divider-right{
+    background-image: url(/assets/images/werklogo.png);
+    background-repeat: no-repeat;
+    width:400px;
+    height:400px;
+    background-size: cover;
 }
-.nav a{
-    text-decoration: none;
-    color: aliceblue;
-    display: inline-block;
-    padding: 20px 20px;
-    text-transform: uppercase;
+.projects-container{
+    text-align: center;
+}
+.projects-text{
+    font-size: 32px;
     font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
+    color: #47525E;
+    margin-top: 20px;
 }
+.projects-subtext{
+    font-size: 28px;
+    margin-top: 10px;
+    font-weight: normal;
+    color: #47525E;
+}
+.socials-container{
+    text-align: center;
+}
+.socials-text-container{
+    background-color: #E6F9DE;
+    border-radius: 15px;
+    padding: 20px;
+    width: 500px;
+    height: 400px;
+    margin-top: 40px;
+    margin-left: 36.6%;
+    text-align: center;
+    font-size:18px;
+
+}
+.socials-text{
+    font-size: 32px;
+    font-weight: bold;
+    color: #47525E;
+    margin-top: 20px;
+}
+.socials-subtext{
+    font-size: 28px;
+    margin-top: 10px;
+    font-weight: normal;
+    color: #47525E;
+}
+.socials-name-text{
+    font-size: 16px;
+    font-weight: bold;
+    color: #47525E;
+    margin-top: 40px;
+}
+
+/* .arrow-right{
+    position: relative;
+    top:30px;
+    left:400px;
+    background-image: url(/assets/images/arrow-right.png);
+   background-size: cover;
+    width: 100px;
+    height: 100px;
+    
+} */
