--- a/style.css
+++ b/style.css
@@ -1,442 +1,390 @@
-*,
-*::before *::after {
-    box-sizing: border-box;
-}
-
-/* Custom Properties */
-:root {
-
-    --ff-primary: 'Open Sans', open-sans;
-    --ff-secondary: 'Raleway', raleway;
-
-    --fw-reg: 300;
-    --fw-bold: 900;
-
-    --clr-light: #fff;
-    --clr-dark: #383e42;
-    --clr-accent: #12ce7f;
-
-    --fs-h1: 3rem;
-    --fs-h2: 2.25rem;
-    --fs-h3: 1.5rem;
-    --fs-body: 1rem;
-
-    --shadow: 0.25em 0.25em 0.75em rgba(0, 0, 0, 0.25), 0.125em 0.125em 0.25em rgba(0, 0, 0, 0.15);
-}
-
-
-
-
-@media (min-width: 800px) {
-    :root {
-        --fs-h1: 4.5rem;
-        --fs-h2: 3.75rem;
-        --fs-h3: 1.5rem;
-        --fs-body: 1.125rem;
-    }
-
-}
-
-/* General styling */
 body {
-    background: var(--clr-light);
-    color: var(--clr-dark);
-    margin: 0;
-    font-family: var(--ff-primary);
-    font-size: var(--fs-body);
-    line-height: 1;
-
+    font-family: 'Montserrat';
+    font-weight: 500;
 }
 
-section {
-    padding: 5em 2em;
+.navbar {
+    background-color: #E6F9DE;
+    margin: 20px;
+    display: grid;
+    grid-template-columns: 0.05fr 1fr;
+    padding: 30px;
+    border-radius: 15px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    font-size:20px;
 }
 
-img {
-    display: block;
-    max-width: 100%;
-}
-
-strong {
-    font-weight: var(--fw-bold)
-}
-
-/* Button */
-
-:focus {
-    outline: 3px solid var(--clr-accent);
-    outline-offset: 3px;
-}
-
-.btn {
-    display: inline-block;
-    padding: 1em 2.5em;
-    background: var(--clr-accent);
-    color: var(--clr-dark);
-    text-decoration: none;
-    cursor: pointer;
-    font-size: 0.8rem;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-weight: var(--fw-bold);
-    transition: transform 200ms ease-in-out;
-}
-
-.btn:hover {
-    transform: scale(1.1);
-}
-
-/* Typeface */
-h1,
-h2,
-h3 {
-    line-height: 1.1;
-    margin: 0;
-}
-
-h1 {
-    font-size: var(--fs-h1)
-}
-
-h2 {
-    font-size: var(--fs-h2)
-}
-
-h3 {
-    font-size: var(--fs-h3)
-}
-
-.section_title {
-    margin-bottom: .25em;
-}
-
-.section_title_intro {
-    font-weight: var(--fw-reg);
-}
-
-.section_subtitle {
-    margin: 0;
-    font-size: var(--fs-h3);
-}
-
-
-.section_subtitle_intro strong {
-    display: block;
-}
-
-
-.section_subtitle_intro,
-.section_subtitle_about {
-    background: var(--clr-accent);
-    padding: 0.25em 1em;
-    font-family: var(--ff-secondary);
-    margin-bottom: 1em;
-}
-
-/* Header */
-.header {
+.navbar-items {
     display: flex;
-    justify-content: space-between;
-    padding: 1em;
+    flex-direction: row;
+    gap: 15px;
+    justify-content: end;
+    align-items: right;
 }
 
-.logo {
-    max-width: 100px;
+.navbar-logo {
+    background-color: #D0E2C8;
+    padding: 5px 10px 5px 20px;
+    border-radius: 5px;
+    width:120%;
 }
 
-.nav {
-    position: fixed;
-    background: var(--clr-dark);
-    color: var(--clr-light);
-    top: 0%;
-    bottom: 0%;
-    left: 0%;
-    right: 0%;
-    z-index: 100;
-
-    transform: translateX(100%);
-    transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1);
-}
-
-.nav_list {
-    list-style: none;
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: 0;
-    padding: 0;
-}
-
-.nav_link {
-    color: inherit;
-    font-weight: var(--fw-bold);
-    font-size: var(--fs-h3);
-    text-decoration: none;
-}
-
-.nav_link:hover {
-    color: var(--clr-accent);
-}
-
-.nav_toggle {
-    padding: 0.5em;
-    background: transparent;
-    border: 0;
-    cursor: pointer;
-    position: absolute;
-    right: 1em;
-    top: 3%;
-    z-index: 1000;
-
-}
-
-.navburger {
-    display: block;
-    position: relative;
-}
-
-.navburger,
-.navburger::before,
-.navburger::after {
-    background-color: var(--clr-accent);
-    width: 2em;
-    height: 3px;
-    border-radius: 1em;
-    transition: transform 250ms ease-in-out;
-}
-
-.navburger::before,
-.navburger::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-}
-
-.navburger::before {
-    top: 6px;
-}
-
-.navburger::after {
-    bottom: 6px;
-}
-
-/* Intro section styling*/
-
-.intro {
-    position: relative;
-}
-
-.intro_img {
-    box-shadow: var(--shadow);
-}
-
-.section_subtitle_intro {
-    display: inline-block;
-}
-
-@media(min-width: 600px) {
-    .intro {
-        display: grid;
-        width: min-content;
-        margin: 0 auto;
-        grid-column-gap: 1em;
-        grid-template-areas:
-            "img title"
-            "img subtitle";
-        grid-template-columns: min-content max-content;
-    }
-
-    .intro_img {
-        grid-area: img;
-        min-width: 250px;
-        position: relative;
-        z-index: 2;
-    }
-}
-
-.section_subtitle_intro {
-    align-self: start;
-    grid-column: -1/ 1;
-    grid-row: 2;
-    text-align: right;
-    position: relative;
-    left: -1.5em;
-    width: calc(100% + 1.5em);
-}
-
-/* What I've Done Section */
-
-.my-work {
-    background-color: var(--clr-dark);
-    background-image: url(color-seamless-space-pattern_102902-2360.webp);
-    background-size: cover;
-
-    color: var(--clr-light);
+.item {
+    background-color: #D0E2C8;
+    padding: 5px 20px 5px 20px;
+    border-radius: 5px;
     text-align: center;
 }
 
-.section_title-work {
-    color: var(--clr-accent);
-    position: relative;
+.hr{
+    width: 50%;
+    margin-left: 25%;
+    margin-right: 25% ;
+    border: 1px solid #E6F9DE;
+
+}
+.hr2{
+    width: 50%;
+    border: 1px solid #E6F9DE;
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-top: 20px;
+}
+.hr-skills{
+    width: 75%;
+    border: 1px solid #343F4B;
+   
+    margin-top: 25%;
 }
 
-.workies {
-    margin-bottom: 2em;
+.hero {
+    display: grid;
+    grid-template-columns: 0.3fr 1fr;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
 }
 
-.work {
-    max-width: 500px;
-    margin: 0 auto;
+.hero-image {
+    background-image: url(/assets/images/PF_BW.png);
+    width: 250px;
+    height: 250px;
+    border-radius: 15px;
+
+    background-size: cover;
 }
 
-@media (min-width: 800px) {
-    .workies {
-        display: flex;
-        max-width: 1000px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .work+.work {
-        margin-left: 2em;
-    }
+.hero-content {
+    margin-top:auto;
+    margin-bottom: auto;
 }
 
-/*about me */
-
-.about-me {
-    max-width: 1000px;
-    margin: 0 auto;
+.hero-text {
+    font-size: 32px;
+    font-weight: bold;
+    color: #47525E;
 }
 
-.about-me-img {
-    box-shadow: var(--shadow);
+.hero-subtext {
+    font-size: 28px;
+    margin-top: 10px;
+    color: #47525E;
+    font-weight: normal;
+}
+.skills-container{
+    text-align: center;
+}
+.skills-text {
+    font-size: 32px;
+    font-weight: bold;
+    color: #47525E;
 }
 
-@media (min-width: 600px) {
-    .about-me {
-        display: grid;
-        grid-template-columns: 1fr 200px;
-        grid-template-areas:
-            "title img"
-            "subtitle img"
-            "text img";
-        grid-column-gap: 2em;
+.skills-subtext {
+    font-size: 28px;
+    margin-top: 10px;
+    font-weight: normal;
+    color: #47525E;
+}
+.text-container{
+    background-color: #E6F9DE;
+    border-radius: 15px;
+    padding: 20px;
+    width: 35%;
+    height: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    text-align: center;
+    font-size:18px;
+}
+
+.text-container2{
+    background-color: #E6F9DE;
+    border-radius: 15px;
+    padding: 20px;
+    width:100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    text-align: center;
+    font-size:18px;
+
+}
+.text-container3{
+    background-color: #E6F9DE;
+    border-radius: 15px;
+    padding: 20px;
+    width:25%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    text-align: center;
+    font-size:18px;
+
+}
+.skills-text-container{
+    background-color: #E6F9DE;
+    border-radius: 15px;
+    padding: 20px;
+    width:25%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    text-align: center;
+    font-size:18px;
+}
+.skills-sub-text-container{
+    background-color: #E6F9DE;
+    border-radius: 15px;
+    padding: 20px;
+    width:40%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    text-align: center;
+    font-size:18px;
+}
+.defense-text-container{
+    background-color: #E6F9DE;
+    border-radius: 15px;
+    padding: 20px;
+    width: 800px;
+    height: 500px;
+    margin-right: 24px;
+    margin-top: 40px;
+    text-align: center;
+    font-size:18px;
+    transition: background-color 0.3s ease;
+}
+.defense-text-container:hover{
+    background-color: #e2fed6;
+     transition: opacity 0.3s ease;
+}
+.defense-text-container::after{
+  content: ""; /* Content to be added on hover */
+  padding: 5px 10px;
+  border-radius: 4px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+.defense-text-container .box-text-defense {
+    transition: opacity 0.3s ease;
+  }
+.defense-text-container:hover .box-text-defense {
+    opacity: 0;
+}
+.defense-text-container:hover::after{
+    content: "I made a quiz application for the new interns for my internship. There were question about ranking within the military and general do's and don't. I was very happy with the project, because of it I got offered a job at the ministries Simulation Central building to work on guiding the new Interns. Skills: Unity & C#";
+    opacity: 1;
+}
+.kapper-text-container{
+    background-color: #E6F9DE;
+    border-radius: 15px;
+    padding: 20px;
+    width: 800px;
+    height: 500px;
+    margin-right: 24px;
+    margin-top: 40px;
+    text-align: center;
+    font-size:18px;
+    transition: background-color 0.3s ease;
+}
+.kapper-text-container:hover{
+    background-color: #e2fed6;
+    transition: opacity 0.3s ease;
+}
+.kapper-text-container::after{
+    content: ""; /* Content to be added on hover */
+    padding: 5px 10px;
+    border-radius: 4px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+.kapper-text-container .box-text-kapper {
+    transition: opacity 0.3s ease;
+}
+
+.kapper-text-container:hover .box-text-kapper {
+    opacity: 0;
+ }
+.kapper-text-container:hover::after{
+    content: "For school we had to make a application for a barber, this could be anything. We decided to make a website with a backend portal. We ran into a lot of problems with teamwork and workload. I learned alot from this project about teamwork and it was also the start of my journey with CSS & HTML. Skills: HTML & CSS Frontend";
+    opacity: 1;
+}
+.portfolio-text-container{
+    background-color: #E6F9DE;
+    border-radius: 15px;
+    padding: 20px;
+    width: 800px;
+    height: 500px;
+    margin-right: 24px;
+    margin-top: 40px;
+    text-align: center;
+    font-size:18px;
+    transition: background-color 0.3s ease;
+}
+.portfolio-text-container:hover{
+    background-color: #e2fed6;
+    transition: opacity 0.3s ease;
+}
+.portfolio-text-container::after{
+    content: ""; /* Content to be added on hover */
+    padding: 5px 10px;
+    border-radius: 4px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+  .portfolio-text-container .box-text-portfolio {
+      transition: opacity 0.3s ease;
     }
-
-    .section_title_about {
-        grid-area: title;
+  .portfolio-text-container:hover .box-text-portfolio {
+      opacity: 0;
+  }
+  .portfolio-text-container:hover::after{
+      content: "Of course I made my portfolio myself. I used Marvel to make the design and html and CSS for the actual scripting. I remade this website about 4 times throughout it's lifetime. I can finally say I'm happy with how it looks. It ofcourse will be updated with more functionality and information. Skills: HTML & Css & UX desinging skills.";
+      opacity: 1;
+  }
+.city-builder-text-container{
+    background-color: #E6F9DE;
+    border-radius: 15px;
+    padding: 20px;
+    width: 900px;
+    height: 200px;
+    margin-top: 40px;
+    margin-left: 26.5%;
+    text-align: center;
+    font-size:18px;
+    transition: background-color 0.3s ease;
+}
+.city-builder-text-container:hover{
+    background-color: #e2fed6;
+    transition: opacity 0.3s ease;
+}
+.city-builder-text-container::after{
+    content: ""; /* Content to be added on hover */
+    padding: 5px 10px;
+    border-radius: 4px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+  .city-builder-text-container .box-text-city-builder {
+      transition: opacity 0.3s ease;
     }
+  .city-builder-text-container:hover .box-text-city-builder {
+      opacity: 0;
+  }
+  .city-builder-text-container:hover::after{
+      content: "With school I started my own project, aptly named Project RTS City Builder. This project was meant to teach students about the first year of school and how to work on their personal work for school. However not everything went as planned. This project was once again a great opportunity for learning. Skills: Unity & Project management with Devops & C#";
+      opacity: 1;
+  }
+.box-text-defense{
+    text-align: center;
+    margin-top: 15%;
+}
+.box-text-kapper{
+    text-align: center;
+    margin-top: 15%;
+}
+.box-text-portfolio{
+    text-align: center;
+    margin-top: 15%;
+}
+.box-text-city-builder{
+    text-align: center;
+    margin-top: 1%;
+    
+}
+.project-box-container{
+    display: flex;
+    align-items: center;
+    margin-left: 25%;
+    margin-right: 25%;
+}
+.divider{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    width:100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:100px;
+    place-items: center;
+}
 
-    .section_subtitle_about {
-        align-self: center;
-        grid-column: 1 / -1;
-        grid-row: 2;
-        font-weight: var(--fw-bold);
-        position: relative;
-        left: -1em;
-        width: calc(100% + 2em);
-        padding-left: 1em;
-        padding-right: calc(200px + 2em);
-    }
+.divider-right{
+    background-image: url(/assets/images/werklogo.png);
+    background-repeat: no-repeat;
+    width:400px;
+    height:400px;
+    background-size: cover;
+}
+.projects-container{
+    text-align: center;
+}
+.projects-text{
+    font-size: 32px;
+    font-weight: bold;
+    color: #47525E;
+    margin-top: 20px;
+}
+.projects-subtext{
+    font-size: 28px;
+    margin-top: 10px;
+    font-weight: normal;
+    color: #47525E;
+}
+.socials-container{
+    text-align: center;
+}
+.socials-text-container{
+    background-color: #E6F9DE;
+    border-radius: 15px;
+    padding: 20px;
+    width: 500px;
+    height: 400px;
+    margin-top: 40px;
+    margin-left: 36.6%;
+    text-align: center;
+    font-size:18px;
 
-    .about-me-img {
-        grid-area: img;
-        position: relative;
-        z-index: 2;
-    }
-
-    /* Projects */
-
-    .my-projects {
-        background-color: var(--clr-dark);
-        color: var(--clr-light);
-        text-align: center;
-    }
-
-    .section_subtitle_projects {
-        color: var(--clr-accent);
-        font-weight: var(--fw-bold);
-        margin-bottom: 2em;
-    }
-
-    .portfolio {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    }
-
-    .portfolio_item {
-        background: var(--clr-accent);
-        overflow: hidden;
-    }
-
-    .portfolio_img {
-        transition: transform 750ms cubic-bezier(0.5, 0, 0.5, 1),
-            opacity 250ms linear;
-    }
-
-    .portfolio_item:focus {
-        position: relative;
-        z-index: 2;
-    }
-
-    .portfolio_img:hover,
-    .portfolio_item:focus .portfolio_img {
-        transform: scale(1.2);
-        opacity: 0.5;
-    }
-
-    /* Footer */
-
-    .footer {
-        background: #fff;
-        color: var(--clr-accent);
-        text-align: center;
-        padding: .5em 0;
-        font-size: var(--fs-h3);
-    }
-
-    .footer a {
-        color: inherit;
-        text-decoration: none;
-    }
-
-    .footer-link {
-
-        font-weight: var(--fw-bold);
-        margin-left: 10%;
-        margin-right: 10%;
-
-    }
-
-    .footer-link:hover,
-    .social-list_link:hover {
-        opacity: 0.75;
-    }
-
-    .footer-link:hover {
-        text-decoration: underline;
-    }
-
-    .footer-link,
-    .social-list {
-        list-style: none;
-        display: flex;
-        justify-content: center;
-        margin: 2em 0;
-        padding: 0;
-    }
-
-    .footer-link,
-    .social-list_item {
-        margin: 0 0.5em;
-    }
-
-    .footer-link,
-    .social-list_link {
-        padding: 0.5em;
-    }
+}
+.socials-text{
+    font-size: 32px;
+    font-weight: bold;
+    color: #47525E;
+    margin-top: 20px;
+}
+.socials-subtext{
+    font-size: 28px;
+    margin-top: 10px;
+    font-weight: normal;
+    color: #47525E;
+}
+.socials-name-text{
+    font-size: 16px;
+    font-weight: bold;
+    color: #47525E;
+    margin-top: 40px;
 }
